bugfix and optimizations
1. fix stapling LRU cache without expire time
2. optimize LRU cache by using cdata instead of PER format

Change-Id: I6fe5f826cfa57f24546318edebfe8fa57782030c

--- a/example.conf.yaml
+++ b/example.conf.yaml
@@ -33,6 +33,9 @@ self_signed:
     - "SSL Cert Server Self-Signed"
   cert_key: "self_signed"
 
+
+# Explanations
+
 # listen: The address ssl-cert-server should listen, be sure DON'T open the server to the world.
 # pid_file: The pid file path, it's used when doing graceful restarts.
 
