--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
 name = ssl-cert-server
 abstract = Auto SSL cert issue and renewal with Let's Encrypt
+version = 0.6.0
 author = Shawn Wang (jxskiss)
 is_original = yes
 license = mit
@@ -7,4 +8,4 @@ lib_dir = lib
 doc_dir = lib
 repo_link = https://github.com/jxskiss/ssl-cert-server
 main_module = lib/resty/ssl-cert-server.lua
-requires = pintsized/lua-resty-http
+requires = openresty >= 1.9.7.2, ledgetech/lua-resty-http >= 0.16.1
