implement envoy SDS service
Change-Id: Iff4b6ef47abd7730e92033f7ec33429d5d0e9a51

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@ t/servroot/
 t/error.log
 lua-resty-http*
 luacov*
-vendor/*
-!vendor/modules.txt
 output/
 temp/
 
@@ -12,3 +10,5 @@ temp/
 *.exe
 ssl-cert-server
 ssl-cert-server.pid
+secret-dir/*
+!secret-dir/.gitkeep
