Rename to simplessl
Change-Id: Ifdf5fe2dbcce9c14710ab1b8604661183f032dad

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name = ssl-cert-server
+name = simplessl
 abstract = Auto SSL cert issue and renewal with Let's Encrypt
 version = 0.6.0
 author = Shawn Wang (jxskiss)
@@ -6,6 +6,6 @@ is_original = yes
 license = mit
 lib_dir = lib
 doc_dir = lib
-repo_link = https://github.com/jxskiss/ssl-cert-server
-main_module = lib/resty/ssl-cert-server.lua
+repo_link = https://github.com/jxskiss/simplessl
+main_module = lib/resty/simplessl.lua
 requires = openresty >= 1.9.7.2, ledgetech/lua-resty-http >= 0.16.1
